# Intelli-credit-iith

./: .env.example  README.md
backend/: .env.example  pyproject.toml  test_cin_lookup.py
backend/app/: config.py  main.py
backend/app/api/: appraisal.py  banking.py  cam.py  chat.py  documents.py  ingest.py  notifications.py  research.py  risk.py  stats.py
backend/app/core/: auth.py  bank_analyzer.py  cam_generator.py  chat_context.py  credit_analyzer.py  credit_engine.py  graph_db.py  llm_chain.py  pdf_processor.py  research_agent.py  risk_model.py
backend/app/models/: credit.py
backend/app/templates/: audit_report.html
data/generator/: mock_credit_data.py  seed_credit_neo4j.py
data/sample/: bank_statements.json  companies.json  einvoices.json  einvoices_012026.json  einvoices_112025.json  einvoices_122025.json  eway_bills.json  eway_bills_012026.json  eway_bills_112025.json  eway_bills_122025.json  financial_statements.json  gstr1_invoices.json  gstr1_invoices_012026.json  gstr1_invoices_112025.json  gstr1_invoices_122025.json  gstr2b_invoices.json  gstr2b_invoices_012026.json  gstr2b_invoices_112025.json  gstr2b_invoices_122025.json  gstr3b_returns.json  gstr3b_returns_012026.json  gstr3b_returns_112025.json  gstr3b_returns_122025.json  itrs.json  litigation.json  loan_applications.json  news_articles.json  promoters.json  purchase_register.json  purchase_register_012026.json  purchase_register_112025.json  taxpayers.json  (+1 more)
frontend/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
nginx/: api.intellicredit.com.conf  intellicredit.com.conf
(+24 files in other folders)
