[project]
name = "credit-appraisal-backend"
version = "1.0.0"
description = "AI-Powered Credit Appraisal Engine using Knowledge Graphs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "openai>=1.58.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.4.0",
    "scikit-learn>=1.6.0",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.5",
    "xhtml2pdf>=0.2.16",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "tabula-py>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.0",
    "textblob>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
